; ModuleID = '/home/carl/AnghaBench/zfs/module/zfs/extr_dsl_bookmark.c_dsl_bookmark_create_redacted_check.c'
source_filename = "/home/carl/AnghaBench/zfs/module/zfs/extr_dsl_bookmark.c_dsl_bookmark_create_redacted_check.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32, i32, i32 }
%struct.TYPE_5__ = type { i32 }

@SPA_FEATURE_REDACTION_BOOKMARKS = common dso_local global i32 0, align 4
@ENOTSUP = common dso_local global i32 0, align 4
@E2BIG = common dso_local global i32 0, align 4
@FTAG = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32*)* @dsl_bookmark_create_redacted_check to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @dsl_bookmark_create_redacted_check(i8* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca %struct.TYPE_6__*, align 8
  %7 = alloca %struct.TYPE_5__*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i32* %1, i32** %5, align 8
  %10 = load i8*, i8** %4, align 8
  %11 = bitcast i8* %10 to %struct.TYPE_6__*
  store %struct.TYPE_6__* %11, %struct.TYPE_6__** %6, align 8
  %12 = load i32*, i32** %5, align 8
  %13 = call %struct.TYPE_5__* @dmu_tx_pool(i32* %12)
  store %struct.TYPE_5__* %13, %struct.TYPE_5__** %7, align 8
  store i32 0, i32* %9, align 4
  %14 = load %struct.TYPE_5__*, %struct.TYPE_5__** %7, align 8
  %15 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = load i32, i32* @SPA_FEATURE_REDACTION_BOOKMARKS, align 4
  %18 = call i32 @spa_feature_is_enabled(i32 %16, i32 %17)
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %23, label %20

20:                                               ; preds = %2
  %21 = load i32, i32* @ENOTSUP, align 4
  %22 = call i32 @SET_ERROR(i32 %21)
  store i32 %22, i32* %3, align 4
  br label %57

23:                                               ; preds = %2
  %24 = load %struct.TYPE_6__*, %struct.TYPE_6__** %6, align 8
  %25 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = sext i32 %26 to i64
  %28 = call i32 (...) @dmu_bonus_max()
  %29 = sext i32 %28 to i64
  %30 = sub i64 %29, 4
  %31 = udiv i64 %30, 4
  %32 = icmp ugt i64 %27, %31
  br i1 %32, label %33, label %36

33:                                               ; preds = %23
  %34 = load i32, i32* @E2BIG, align 4
  %35 = call i32 @SET_ERROR(i32 %34)
  store i32 %35, i32* %3, align 4
  br label %57

36:                                               ; preds = %23
  %37 = load %struct.TYPE_5__*, %struct.TYPE_5__** %7, align 8
  %38 = load %struct.TYPE_6__*, %struct.TYPE_6__** %6, align 8
  %39 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %38, i32 0, i32 2
  %40 = load i32, i32* %39, align 4
  %41 = load i32, i32* @FTAG, align 4
  %42 = call i32 @dsl_dataset_hold(%struct.TYPE_5__* %37, i32 %40, i32 %41, i32** %8)
  store i32 %42, i32* %9, align 4
  %43 = load i32, i32* %9, align 4
  %44 = icmp eq i32 %43, 0
  br i1 %44, label %45, label %55

45:                                               ; preds = %36
  %46 = load i32*, i32** %8, align 8
  %47 = load %struct.TYPE_6__*, %struct.TYPE_6__** %6, align 8
  %48 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %47, i32 0, i32 1
  %49 = load i32, i32* %48, align 4
  %50 = load i32*, i32** %5, align 8
  %51 = call i32 @dsl_bookmark_create_check_impl(i32* %46, i32 %49, i32* %50)
  store i32 %51, i32* %9, align 4
  %52 = load i32*, i32** %8, align 8
  %53 = load i32, i32* @FTAG, align 4
  %54 = call i32 @dsl_dataset_rele(i32* %52, i32 %53)
  br label %55

55:                                               ; preds = %45, %36
  %56 = load i32, i32* %9, align 4
  store i32 %56, i32* %3, align 4
  br label %57

57:                                               ; preds = %55, %33, %20
  %58 = load i32, i32* %3, align 4
  ret i32 %58
}

declare dso_local %struct.TYPE_5__* @dmu_tx_pool(i32*) #1

declare dso_local i32 @spa_feature_is_enabled(i32, i32) #1

declare dso_local i32 @SET_ERROR(i32) #1

declare dso_local i32 @dmu_bonus_max(...) #1

declare dso_local i32 @dsl_dataset_hold(%struct.TYPE_5__*, i32, i32, i32**) #1

declare dso_local i32 @dsl_bookmark_create_check_impl(i32*, i32, i32*) #1

declare dso_local i32 @dsl_dataset_rele(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
